Fix overflow x in formation

--- a/portfolio-cv/src/pages/formation/Formation.scss
+++ b/portfolio-cv/src/pages/formation/Formation.scss
@@ -22,6 +22,7 @@
     width: 100%;
     padding-bottom: 100px;
     margin-bottom: 60px;
+    overflow-x: hidden;
   }
 
   .experience,
